Added S3 for static images, admin, CSS

--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -4,7 +4,16 @@
 
 <h1>Contact Me</h1>
 
+<ul>
+    {% for comment in comments %}
+    <li>
+        <h1>{{ comment.subject }} - {{ comment.name }}</h1>
+        <img src="{{ comment.image.url }}">
+        <p>{{ comment.message }}</p>
+        <hr>
+    </li>
+    {% endfor %}
 
-
+</ul>
 
 {% endblock %}
