--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -5,7 +5,7 @@
     <!--  add meta for better SEO Optimization  -->
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static 'css/main.css' %}" rel="stylesheet">
+    <link href="{% static 'css/base.css' %}" rel="stylesheet">
 </head>
 
 <body>
